--- a/content/projects/connectfour.mdx
+++ b/content/projects/connectfour.mdx
@@ -2,9 +2,9 @@
 title: Connect Four Game
 description: Connect Four is a classic strategy game that I recreated for the web, allowing players to enjoy it anytime, anywhere with their friends.
 date: "2023-02-23"
-url: lehoanghai9/connectfour
+url: https://lehoanghai9.github.io/
 published: true
-repository: false
+repository: lehoanghai9/connectfour
 ---
 
 
